[tool.poetry]
name = "celebA"
version = "0.1.0"
description = ""
authors = ["Danielle Ben Bashat <daniellebenba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
#google-cloud-storage = "^2.10.0"
#pillow = "^10.1.0"
#matplotlib = "^3.7.1"
#google-cloud = "^0.34.0"
#transformers = "^4.34.1"
#pandas = "2.0.0"
#scikit-learn = "1.3.0"
#tensorflow = "2.13.0"
code-loader = "^1.0.79"
code-loader-helpers = "^1.0.20"
pandas = "2.0.0"
tqdm = "^4.67.1"
google-cloud-storage = "^3.1.0"
scikit-learn = "1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
